<resources>
    <string name="app_name">NewsBit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="news">news</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="business">Business</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="choose_category">CHOOSE CATEGORY</string>
    <string name="share">SHARE</string>
</resources>