<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".StartFragment">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:fontFamily="monospace"
            android:text="@string/choose_category"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/topHeadline"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="28dp" />

        <Button
            android:id="@+id/topHeadline"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:background="@drawable/round_btn"
            android:text="@string/top_headlines"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/business"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:background="@drawable/round_btn"
            android:textColor="@color/white"
            android:text="@string/business"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/entertainment"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="368dp"
            android:background="@drawable/round_btn"
            android:text="@string/entertainment"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/general"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="492dp"
            android:background="@drawable/round_btn"
            android:textColor="@color/white"
            android:text="@string/general"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/health"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="492dp"
            android:background="@drawable/round_btn"
            android:textColor="@color/white"
            android:text="@string/health"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/science"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="368dp"
            android:background="@drawable/round_btn"
            android:textColor="@color/white"
            android:text="@string/science"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/sports"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:background="@drawable/round_btn"
            android:textColor="@color/white"
            android:text="@string/sports"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/text" />

        <Button
            android:id="@+id/technology"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="236dp"
            android:background="@drawable/round_btn"
            android:text="@string/technology"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>