<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    card_view:cardCornerRadius="30dp"
    card_view:cardElevation="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center_horizontal"
    android:layout_margin="13dp">
<!--    android:background="#d7eadd"-->
<!--    card_view:cardBackgroundColor="#d7eadd"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="13dp"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:contentDescription="@string/news"
            android:background="#d7eadd"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textTitle"
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:fontFamily="casual"
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/textDescription"
            style="@style/TextAppearance.AppCompat.Body1"
            android:fontFamily="sans-serif-light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/share"
            android:background="@drawable/round_btn"
            android:textAllCaps="true">
        </androidx.appcompat.widget.AppCompatButton>


    </LinearLayout>
</androidx.cardview.widget.CardView>